--- a/Frontend/src/app/components/expense-form/expense-form.component.scss
+++ b/Frontend/src/app/components/expense-form/expense-form.component.scss
@@ -12,15 +12,38 @@
     width: 100%;
     height: fit-content;
   }
-
-  .scale-y {
-
-  }
 }
 
 .actions {
-  padding-bottom: 3%;
-  padding-left: 2%;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  margin-top: 24px;
+  padding: 0 16px 16px 16px;
+  
+  button {
+    flex: 1;
+    height: 45px;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+
+    &[type="submit"] {
+      background-color: #1976d2;
+      color: white;
+
+      &:disabled {
+        background-color: rgba(0, 0, 0, 0.12);
+        color: rgba(0, 0, 0, 0.38);
+      }
+    }
+
+    &[type="button"] {
+      background-color: #424242;
+      color: white;
+    }
+  }
 }
 
 mat-error {
