--- a/Frontend/src/app/components/expenses/expenses.component.scss
+++ b/Frontend/src/app/components/expenses/expenses.component.scss
@@ -24,7 +24,6 @@ $shadowColor: rgba(0, 0, 0, 0.2);
 
     th {
       color: white;
-
       font-weight: bold;
       padding: 12px 16px;
       text-align: left;
@@ -32,17 +31,24 @@ $shadowColor: rgba(0, 0, 0, 0.2);
     }
 
     td {
-
       padding: 12px 16px;
-      border-bottom: 1px solid $darkColor;
+      background-color: $lightGreyColor;
+      color: $darkColor;
 
       .mdc-data-table__content {
-        color: $lightGreyColor;
+        color: $darkColor;
       }
     }
 
     tr {
-      background-color: $lightGreyColor;
+      &:first-child td {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+      
+      &:last-child td {
+        border-bottom: none;
+      }
     }
   }
 }
